# meetscribe

./: .gitignore  PIPELINE_PROMPT.md  README.md  SEGMENT_PROMPT.md  main.py  merge_transcripts.py  pipeline_prompt.py  pyproject.toml
