[project]
name = "vibevoice-asr"
version = "0.1.0"
description = "Meeting intelligence pipeline — transcription, visual analysis, and structured reporting"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.35",
    "python-dotenv>=1.0.0",
]

[project.scripts]
vibevoice = "main:cli"
